--- a/TEL_ProjectBus/appsettings.json
+++ b/TEL_ProjectBus/appsettings.json
@@ -6,5 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5000"
+      }
+    }
+  },
   "UseInMemoryTransport": true
 }
