добавлена локальная авторизация

--- a/TEL_ProjectBus/appsettings.Development.json
+++ b/TEL_ProjectBus/appsettings.Development.json
@@ -8,5 +8,10 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=tel_project;Username=postgres;Password=paroL;"
+  },
+  "JwtSettings": {
+    "Secret": "SuperSecretKey_123456789",
+    "Issuer": "telprojectapi",
+    "Audience": "telprojectapifrontend"
   }
 }
