--- a/TEL_ProjectBus/appsettings.Development.json
+++ b/TEL_ProjectBus/appsettings.Development.json
@@ -7,10 +7,12 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=tel_project;Username=postgres;Password=paroL;"
+    //"DefaultConnection": "Host=localhost;Port=5432;Database=tel_project;Username=postgres;Password=paroL;",
+    //"DefaultConnection": "Server=localhost;Database=tel_project;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=tel_project_test;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "JwtSettings": {
-    "Secret": "SuperSecretKey_123456789",
+    "Secret": "YourVerySecureAndLongSecretKeyHere12345",
     "Issuer": "telprojectapi",
     "Audience": "telprojectapifrontend"
   }
