текст авторизации АД

--- a/TEL_ProjectBus/appsettings.Development.json
+++ b/TEL_ProjectBus/appsettings.Development.json
@@ -8,9 +8,7 @@
 
   "ConnectionStrings": {
     //"DefaultConnection": "Host=localhost;Port=5432;Database=tel_project;Username=postgres;Password=YourStrong!Passw0rd",
-    //"DefaultConnection": "Server=localhost;Database=tel_project;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;",
-    //"DefaultConnection": "Server=TEL-AZURE-01V\\SQLEXPRESS;Database=tel_project_test;Trusted_Connection=True;TrustServerCertificate=True;",
-    //"DefaultConnection": "Server=10.1.101.42\\SQLEXPRESS;Database=tel_project_test;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=tel_project_test;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "JwtSettings": {
     "Secret": "YourVerySecureAndLongSecretKeyHere12345",
