Add TEL_ProjectBus.Common and update project structure
- Updated solution file to include `TEL_ProjectBus.Common`.
- Added new constants and `CreateProjectParamsJson` method in `TestConsole.cs`.
- Renamed properties in configuration files and updated types in `ProjectParameter.cs`.
- Introduced new enums for project phases, stages, and statuses.
- Enhanced `Program.cs` with JWT authentication and Swagger setup.
- Updated consumers for budget handling and added new endpoints in `AuthController`.
- Implemented project profile handling in `GetProjectProfileConsumer`.
- Added sample data file `test_project_params.json` and utility class `EnumExtensions.cs`.

--- a/TEL_ProjectBus/TEL_ProjectBus.csproj
+++ b/TEL_ProjectBus/TEL_ProjectBus.csproj
@@ -21,12 +21,6 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.9.0" />
   </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Dockerfile">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
 	
 <ItemGroup>
     <Content Update="Seed\TestData\project_phases.json">
@@ -61,6 +55,10 @@
 <ItemGroup>
   <Folder Include="DAL\Entities\UserManagement\" />
   <Folder Include="WebAPI\Extensions\" />
+</ItemGroup>
+	
+<ItemGroup>
+  <ProjectReference Include="..\TEL_ProjectBus.Common\TEL_ProjectBus.Common.csproj" />
 </ItemGroup>
 
 
