доработана авторизация и получение данных о пользователе

--- a/TEL_ProjectBus/appsettings.Development.json
+++ b/TEL_ProjectBus/appsettings.Development.json
@@ -14,5 +14,15 @@
     "Secret": "YourVerySecureAndLongSecretKeyHere12345",
     "Issuer": "telprojectapi",
     "Audience": "telprojectapifrontend"
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:5000", // ?? 
+      "http://localhost:4082", // Swagger
+      "http://localhost:4300", // Angular
+      "http://localhost:4200", // Angular
+      "http://10.1.101.42:4300", // Angular
+      "http://10.1.101.42:4082"
+    ]
   }
 }
