--- a/TEL_ProjectBus/appsettings.json
+++ b/TEL_ProjectBus/appsettings.json
@@ -13,5 +13,16 @@
       }
     }
   },
-  "UseInMemoryTransport": true
+  "UseInMemoryTransport": true,
+  "RabbitMq": {
+    "Host": "rabbitmq://user:pass@localhost:5672",
+    "User": "user",
+    "Password": "pass"
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "https://app.company.com",
+      "https://admin.company.com"
+    ]
+  }
 }
