обновление работы с dbseed

--- a/TEL_ProjectBus/TEL_ProjectBus.csproj
+++ b/TEL_ProjectBus/TEL_ProjectBus.csproj
@@ -23,6 +23,12 @@
   </ItemGroup>
 	
 <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="Seed\TestData\project_phases.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
