--- a/TEL_ProjectBus/appsettings.Development.json
+++ b/TEL_ProjectBus/appsettings.Development.json
@@ -7,7 +7,8 @@
   },
 
   "ConnectionStrings": {
-    //"DefaultConnection": "Host=localhost;Port=5432;Database=tel_project;Username=postgres;Password=YourStrong!Passw0rd",
+    //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=tel_project_test;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
+
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=tel_project_test;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "JwtSettings": {
