--- a/TEL_ProjectBus/TEL_ProjectBus.csproj
+++ b/TEL_ProjectBus/TEL_ProjectBus.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DAL\Entities\UserManagement\**" />
+    <Content Remove="DAL\Entities\UserManagement\**" />
+    <EmbeddedResource Remove="DAL\Entities\UserManagement\**" />
+    <None Remove="DAL\Entities\UserManagement\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MassTransit" Version="8.4.0" />
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.0" />
@@ -59,7 +66,6 @@
 </ItemGroup>
 	
 <ItemGroup>
-  <Folder Include="DAL\Entities\UserManagement\" />
   <Folder Include="WebAPI\Extensions\" />
 </ItemGroup>
 	
