добавлены пользователи по всем ролям + CleanIdentity DB

--- a/TEL_ProjectBus/appsettings.json
+++ b/TEL_ProjectBus/appsettings.json
@@ -19,6 +19,18 @@
     "User": "user",
     "Password": "pass"
   },
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=tel_project_test;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=tel_project_test;Trusted_Connection=True;TrustServerCertificate=True;",
+    //"CleanIdentityConnection": "Server=localhost\\SQLEXPRESS;Database=IdentityClean;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
+    "CleanIdentityConnection": "Server=localhost\\SQLEXPRESS;Database=IdentityClean;Trusted_Connection=True;TrustServerCertificate=True;"
+
+  },
+  "JwtSettings": {
+    "Secret": "YourVerySecureAndLongSecretKeyHere12345",
+    "Issuer": "telprojectapi",
+    "Audience": "telprojectapifrontend"
+  },
   "Cors": {
     "AllowedOrigins": [
       "https://app.company.com",
