--- a/TEL_ProjectBus/appsettings.Development.json
+++ b/TEL_ProjectBus/appsettings.Development.json
@@ -5,17 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
-  "ConnectionStrings": {
-    //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=tel_project_test;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
-
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=tel_project_test;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
-  "JwtSettings": {
-    "Secret": "YourVerySecureAndLongSecretKeyHere12345",
-    "Issuer": "telprojectapi",
-    "Audience": "telprojectapifrontend"
-  },
   "Cors": {
     "AllowedOrigins": [
       "http://localhost:5000", // ?? 
@@ -26,5 +15,5 @@
       "http://10.1.101.42:4082"
     ]
   },
-  "UseDbSeed": false
+  "UseDbSeed": true
 }
