объединение новой ERD BD

--- a/TEL_ProjectBus/appsettings.json
+++ b/TEL_ProjectBus/appsettings.json
@@ -20,8 +20,8 @@
     "Password": "pass"
   },
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=tel_project_test;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TELProject_copy;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=10.1.101.42\\SQLEXPRESS;Database=TELProject_copy;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TELProject_copy;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "JwtSettings": {
     "Secret": "YourVerySecureAndLongSecretKeyHere12345",
