доработана связь с БД с nvarchar(450) userid

--- a/TEL_ProjectBus/appsettings.json
+++ b/TEL_ProjectBus/appsettings.json
@@ -19,10 +19,6 @@
     "User": "user",
     "Password": "pass"
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=10.1.101.42\\SQLEXPRESS;Database=TELProject_copy;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
-    //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TELProject_copy;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
   "JwtSettings": {
     "Secret": "YourVerySecureAndLongSecretKeyHere12345",
     "Issuer": "telprojectapi",
@@ -33,6 +29,10 @@
       "https://app.company.com",
       "https://admin.company.com"
     ]
+  },
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=10.1.101.42\\SQLEXPRESS;Database=TELProject_copy;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TELProject_v2;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "UseDbSeed": false
 }
