добавление доп полей к роли

--- a/TEL_ProjectBus/appsettings.json
+++ b/TEL_ProjectBus/appsettings.json
@@ -32,7 +32,7 @@
   },
   "ConnectionStrings": {
     //"DefaultConnection": "Server=10.1.101.42\\SQLEXPRESS;Database=TELProject_copy;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TELProject_v2;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TELProject_v3;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-  "UseDbSeed": false
+  "UseDbSeed": true
 }
