добавлен контроль над seed методом из apsettings

--- a/TEL_ProjectBus/appsettings.json
+++ b/TEL_ProjectBus/appsettings.json
@@ -34,5 +34,10 @@
     //"DefaultConnection": "Server=10.1.101.42\\SQLEXPRESS;Database=TELProject_copy;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TELProject_v3;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-  "UseDbSeed": true
+  "DbSeed": {
+    "UseDbSeed": true,
+    "RecreateDb": false,
+    "ClearData": true,
+    "LoadTestData": true
+  }
 }
