доработан метод api/BudgetQuery/projects/1/budgets => добавлены id в dto

--- a/TEL_ProjectBus/appsettings.json
+++ b/TEL_ProjectBus/appsettings.json
@@ -31,11 +31,11 @@
     ]
   },
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=10.1.101.42\\SQLEXPRESS;Database=TELProject_copy;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TELProject_v3;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=10.1.101.42\\SQLEXPRESS;Database=TELProject_v3;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TELProject_v3;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "DbSeed": {
-    "UseDbSeed": true,
+    "UseDbSeed": false,
     "RecreateDb": false,
     "ClearData": true,
     "LoadTestData": true
