доработка Projects CRUD

--- a/TEL_ProjectBus/appsettings.json
+++ b/TEL_ProjectBus/appsettings.json
@@ -31,7 +31,7 @@
     ]
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=10.1.101.42\\SQLEXPRESS;Database=TELProject_v3;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=10.1.101.42\\SQLEXPRESS;Database=TELProject;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
     //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TELProject_v3;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "DbSeed": {
