--- a/TEL_ProjectBus/appsettings.json
+++ b/TEL_ProjectBus/appsettings.json
@@ -31,8 +31,8 @@
     ]
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=10.1.101.42\\SQLEXPRESS;Database=TELProject;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
-    //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TELProject_v3;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=10.1.101.42\\SQLEXPRESS;Database=TELProject;User Id=sa;Password=Tel*&Project;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TELProject_v3;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "DbSeed": {
     "UseDbSeed": false,
